infra/qsb/k8s/apps/kube-system/cilium/netpols/allow-egress-minio.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-minio
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/minio: allow
  egress:
    # TODO: Figure out why this one doesn't work
    - toFQDNs:
        - matchName: "s3.${DOMAIN}"
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toCIDRSet:
        - cidr: 10.1.1.12/32
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
